<resources>
	<string name="app_name" translatable="false">Future Engineers</string>
	<string name="login_text">Login</string>
	<string name="paragraph_name">Paragraph</string>
	<string name="paragraph_content" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec tortor nisl. Suspendisse sodales fermentum nisl. Duis viverra, sapien non iaculis tempus, orci ex lobortis augue, posuere ornare eros augue sit amet nibh. Sed vulputate purus dui, quis volutpat augue consectetur quis. Phasellus porttitor arcu ut tellus faucibus tincidunt.</string>
	<string name="concept_name">Paragraph</string>
	<string name="concept_content" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec tortor nisl. Suspendisse sodales fermentum nisl. Duis viverra, sapien non iaculis tempus, orci ex lobortis augue, posuere ornare eros augue sit amet nibh. Sed vulputate purus dui, quis volutpat augue consectetur quis. Phasellus porttitor arcu ut tellus faucibus tincidunt.</string>
	<string name="hint_concept">Concept</string>
	<string name="hint_paragraph">Paragraph</string>
	<string name="hint_paragraph_content">Content</string>
	<string name="hint_concept_summary">Summary</string>
	<string name="sub_section">Sub Section</string>
	<string name="open">Open</string>
	<string name="section">Section</string>
	<string name="title_home">Home</string>
	<string name="main_menu">Main Menu</string>
	<string name="tests">Tests</string>
	<string name="add">Add</string>
	<string name="settings">Settings</string>
	<string name="search">Search</string>
	<string name="prompt_email" translatable="false">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="invalid_email">Not a valid email</string>
	<string name="invalid_password">Password must be >=8 characters</string>
	<string name="login_failed">"Login failed"</string>
	<string name="text_login">Log in</string>
	<string name="text_section">Section</string>
	<string name="text_concepts">Concepts:</string>
	<string name="text_sub_sections">Sub-Sections:</string>
	<string name="text_check_your_knowledge">Test your knowledge</string>
	<string name="false_button">False</string>
	<string name="truth_button">True</string>
	<string name="reveal">Reveal</string>
	<string name="hidden_text">********</string>
	<string name="hide">Hide</string>
	<string name="spinner_content_description" translatable="false">Spinner drop down arrow</string>
	<string name="settings_theme_key" translatable="false">settings_theme_key</string>
	<string name="light">Light</string>
	<string name="light_key" translatable="false">light_key</string>
	<string name="dark">Dark</string>
	<string name="dark_key" translatable="false">dark_key</string>
	<string name="system">System default</string>
	<string name="system_key" translatable="false">system_key</string>
	<string name="logout_key" translatable="false">logout_key</string>
	<string name="password_key" translatable="false">password_key</string>
	<string name="email_key" translatable="false">email_key</string>
	<string name="settings_account">Account</string>
	<string name="settings_email">Change e-mail</string>
	<string name="settings_password">Change password</string>
	<string name="settings_logout">Log out</string>
	<string name="settings_preferences">Preferences</string>
	<string name="settings_language">Choose language</string>
	<string name="settings_theme">Choose application theme</string>
	<string name="language_key" translatable="false">language_hey</string>
	<string name="text_back">Back</string>
	<string name="text_next">Next</string>
	<string name="text_exam_mode">Exam Mode</string>
	<string name="text_study_mode">Study Mode</string>
	<string name="summary_task">Task {0}.</string>
	<string name="hint_question">Question</string>
	<string name="hint_answer">Answer</string>
	<string name="button_add">Add</string>
	<string name="hint_correct_answer">Correct Answer</string>
	<string name="hint_start_paragraph">Start Paragraph</string>
	<string name="hint_possible_answers">Comma-separated possible answers</string>
	<string name="hint_continue_paragraph">Continue Paragraph</string>
	<string name="button_done">Done</string>
	<string name="fill_blanks">Fill blanks</string>
	<string name="select_from_list">Select from list</string>
	<string name="single_choice">Single choice</string>
	<string name="multiple_choice">Multiple choice</string>
	<string name="flash_card">Flash card</string>
	<string name="truth_or_false">Truth or False</string>
	<string name="multiple_truth_or_false">Multiple Truth or False</string>
	<string name="text_register">Register</string>
	<string name="hint_username">Username</string>
	<string name="button_register">Register</string>
	<string name="hint_repeat_password">Repeat Password</string>
	<string name="hint_section">Section</string>
	<string name="button_add_concept">Add Concept</string>
	<string name="button_add_sub_section">Add Sub-Section</string>
	<string name="button_add_exercise">Add Exercise</string>
	<string name="token_key" translatable="false">token_key</string>
	<string name="user_key" translatable="false">user_key</string>
	<string name="test_description">Test your knowledge! \n 📝📝📝</string>
	<string name="test_name">Exam simulation</string>
</resources>
