<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".ui.login.LoginActivity">

	<TextView
		android:id="@+id/login_future_engineers"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAlignment="center"
		android:breakStrategy="simple"
		android:textSize="80sp"
		android:textColor="@color/colorPrimary"
		android:text="@string/app_name"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/login_text_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAlignment="center"
		android:breakStrategy="simple"
		android:textSize="40sp"
		android:text="@string/text_login"
		app:layout_constraintTop_toBottomOf="@id/login_future_engineers"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<EditText
		android:id="@+id/login_email"
		style="@style/Theme.Android.editText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="96dp"
		android:hint="@string/prompt_email"
		android:autofillHints="emailAddress"
		android:inputType="textEmailAddress"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/login_text_view" />

	<EditText
		android:id="@+id/login_password_edit_text"
		style="@style/Theme.Android.editText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:hint="@string/prompt_password"
		android:autofillHints="password"
		android:imeActionLabel="@string/action_sign_in_short"
		android:imeOptions="actionDone"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/login_email" />

	<Button
		android:id="@+id/login_button"
		style="@style/Theme.Android.button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginTop="16dp"
		android:enabled="false"
		android:text="@string/action_sign_in"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text"
		app:layout_constraintVertical_bias="0.2" />

	<ProgressBar
		android:id="@+id/login_loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="64dp"
		android:layout_marginBottom="64dp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/login_password_edit_text"
		app:layout_constraintStart_toStartOf="@+id/login_password_edit_text"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>
