<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".ui.exam.edit.EditExerciseActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		tools:context=".ui.exam.edit.EditExerciseActivity">

		<!-- Exercise type -->
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<Spinner
				android:id="@+id/spinner_possible_exercises"
				style="@style/Theme.Android.editText"
				android:background="@drawable/surface_background_ripple"
				android:inputType="text"
				android:maxLines="1"
				android:minHeight="48dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="16dp"
				android:contentDescription="@string/spinner_content_description"
				android:elevation="5dp"
				android:src="@drawable/ic_arrow_drop_down"
				app:layout_constraintBottom_toBottomOf="@id/spinner_possible_exercises"
				app:layout_constraintEnd_toEndOf="@id/spinner_possible_exercises"
				app:layout_constraintTop_toTopOf="@id/spinner_possible_exercises" />

		</androidx.constraintlayout.widget.ConstraintLayout>


		<!-- Edit text question	-->
		<EditText
			android:id="@+id/edit_text_question"
			style="@style/Theme.Android.editText"
			android:autofillHints=""
			android:hint="@string/hint_question"
			android:inputType="text"
			android:selectAllOnFocus="true" />

		<!--  Flash Card  -->
		<!--  Edit text - answer  -->
		<EditText
			android:id="@+id/edit_text_flash_card"
			style="@style/Theme.Android.editText"
			android:autofillHints=""
			android:hint="@string/hint_answer"
			android:inputType="text"
			android:selectAllOnFocus="true" />

		<!--  Truth or False	-->

		<CheckBox
			android:id="@+id/checkbox_truth_or_false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/edit_text_answer"
			app:layout_constraintTop_toTopOf="parent" />

		<ListView
			android:id="@+id/list_view_answers"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:divider="@null"
			android:dividerHeight="0dp" />

		<!-- Choice / Multiple Choice / Multiple truth or false -->
		<!-- Edit text possible answers -->
		<!-- Checkboxes - correct -->


		<!--  Fill blanks	-->
		<!--  Edit text - start	-->
		<!--  Edit text - blank	-->
		<!--  Edit text - end	-->

		<!--  Select from list	-->
		<!--  Edit text - start	-->
		<!--  Edit text - blank	-->
		<!--  Edit text - other answer	-->
		<!--  Edit text - end	-->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">

			<Button
				android:id="@+id/button_add"
				style="@style/Theme.Android.button"
				android:layout_gravity="center"
				android:text="@string/button_add" />

			<Button
				android:id="@+id/button_done"
				style="@style/Theme.Android.button"
				android:layout_gravity="center"
				android:text="@string/button_done" />
		</LinearLayout>


	</LinearLayout>
</ScrollView>